data/derived/comb/progs/unify/prog6747.ml.out
Characters 38-59:
  let stringOfList f l = "[" ^ sepConcat(";", List.map(f l) )^ "]";;
                                        ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type string
